added deployment for GCP Compute Engine and AWS